--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -4,7 +4,7 @@
     <title>问卷网-创建问卷</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../static/teacher/css/index.css">
+    <link rel="stylesheet" href="../../static/css/index.css">
     <script src="../../static/vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="../../static/js/common.js"></script>
 
